# gchat_linux

./: .gitignore  CMakeLists.txt  README.md  external.c  external.h  gchat_linux.desktop  gchat_linux.xpm  macros.h  main.c  notification.c  notification.h  preferences.c  preferences.h
